# file_chop

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/args/: en-gb.yml
tests/: cli.rs
