[package]
name = "file_chop"
version = "0.1.0"
authors = ["alpha-tango-kilo <atk@aaathats3as.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/alpha-tango-kilo/file_chop"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
